--- a/index.html
+++ b/index.html
@@ -7,21 +7,25 @@
 </head>
 <body>
     <header>
-        <ul class="site-menu">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
+        <nav class="menu">
+            <ul class="site-menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-        <section class="intro">
-            <div class="intro-wrapper">
-                <h1>Our strong<br> organisation</h1>
-                <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
-                <a class="contact-link" href="">Contact Us</a>
-            </div>
-            <a href="#" class="intro-link"><img class="intro-image" src="images/html.jpg" alt="Тэг html"></a>    
+        <section class="intro-grey"> 
+            <div class="intro">  
+                <div class="intro-wrapper">
+                    <h1>Our strong<br> organisation</h1>
+                    <p class="intro-text">Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod tempor incididunt  ut labore et. ectetur adig ipis cing elit, sed do eiusmod tempor incididunt.</p>
+                    <a class="contact-link" href="">Contact Us</a>
+                </div>    
+                <a href="#" class="intro-link"><img class="intro-image" src="images/html.jpg" alt="Тэг html"></a> 
+            </div>   
         </section>
         <section class="services">
             <div class="services-wrapper">
